ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_PM
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_PM
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_PM
ADIL Gain: $ -1.1 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AL_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_QP_DB15
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_QP_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QL_DB15
ADIL Gain: $ 0.01 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QP_DB15
ADIL Gain: $ -0.38 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_IR4
ADIL Gain: $ -1.21 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_QP
ADIL Gain: $ -0.74 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AL
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_QP
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AV
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QL
ADIL Gain: $ 0 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AO_AC
ADIL Gain: $ -0.69 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP_PM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV
ADIL Gain: $ -0.31 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IR4
ADIL Gain: $ -0.41 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AV
ADIL Gain: $ -0.84 Win %: 0 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_VI
ADIL Gain: $ 0.27 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_SS
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QL
ADIL Gain: $ 0.29 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_DB15
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AO
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AC
ADIL Gain: $ 0.44 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_PM
ADIL Gain: $ 0.33 Win %: 100.00 in 1 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_PM
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2
ADIL Gain: $ -2.7 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_QP_DB15
ADIL Gain: $ -0.05 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_TR_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AV_DB15
ADIL Gain: $ -1.14 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AL_DB15
ADIL Gain: $ -3.93 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_QP_DB15
ADIL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_TR_DB15
ADIL Gain: $ 0.22 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AV_DB15
ADIL Gain: $ -1.76 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_QP_DB15
ADIL Gain: $ -0.12 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QL_DB15
ADIL Gain: $ -0.07 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QP_DB15
ADIL Gain: $ -0.41 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_IR4
ADIL Gain: $ -1.89 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR_QP
ADIL Gain: $ -1.22 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP_IR4
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_TR
ADIL Gain: $ 0.52 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AV
ADIL Gain: $ -0.88 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_AL
ADIL Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV_QP
ADIL Gain: $ -0.35 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_TR
ADIL Gain: $ 0.34 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AV
ADIL Gain: $ -1.32 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_AL
ADIL Gain: $ -2.12 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM_QP
ADIL Gain: $ -0.17 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QL
ADIL Gain: $ -0.77 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT_QP
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AO_AC
ADIL Gain: $ -0.95 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP_PM
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_RV
ADIL Gain: $ -2.55 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IR4
ADIL Gain: $ -0.54 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TR
ADIL Gain: $ 0.34 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AV
ADIL Gain: $ -1.27 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AL
ADIL Gain: $ 0.7 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_VI
ADIL Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_LI
ADIL Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QP
ADIL Gain: $ -0.31 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_HM
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_SS
ADIL Gain: $ 0.33 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_QL
ADIL Gain: $ 0.8 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_DB15
ADIL Gain: $ 0.59 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AO
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_AC
ADIL Gain: $ -0.17 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_IT
ADIL Gain: $ 0.03 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_PM
ADIL Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB2_CS2_TS
ADIL Gain: $ -1.7 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_QP_DB15
ADIL Gain: $ -2.23 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_TR_DB15
ADIL Gain: $ 0.29 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AV_DB15
ADIL Gain: $ -0.9 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AL_DB15
ADIL Gain: $ -3.93 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_QP_DB15
ADIL Gain: $ -0.12 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_TR_DB15
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AV_DB15
ADIL Gain: $ -4.09 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_QP_DB15
ADIL Gain: $ -0.16 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QL_DB15
ADIL Gain: $ -0.07 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QP_DB15
ADIL Gain: $ -0.61 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_IR4
ADIL Gain: $ -1.89 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR_QP
ADIL Gain: $ -1.63 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP_IR4
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_TR
ADIL Gain: $ 0.52 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AV
ADIL Gain: $ -1.27 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_AL
ADIL Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV_QP
ADIL Gain: $ -0.35 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_TR
ADIL Gain: $ 0.49 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AV
ADIL Gain: $ -1.19 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_AL
ADIL Gain: $ 0.34 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM_QP
ADIL Gain: $ 0.08 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QL
ADIL Gain: $ 0.17 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT_QP
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AO_AC
ADIL Gain: $ -1.4 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP_PM
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_RV
ADIL Gain: $ -1.44 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IR4
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TR
ADIL Gain: $ 0.34 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AV
ADIL Gain: $ -1.27 Win %: 0 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AL
ADIL Gain: $ -0.03 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_VI
ADIL Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_LI
ADIL Gain: $ 0.16 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QP
ADIL Gain: $ -0.31 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_HM
ADIL Gain: $ -0.24 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_SS
ADIL Gain: $ 0.33 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_QL
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_DB15
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AO
ADIL Gain: $ 0.62 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_AC
ADIL Gain: $ 0.08 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_IT
ADIL Gain: $ 0.05 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_PM
ADIL Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB2_OS2_CB1_CS1_TS
ADIL Gain: $ -1.57 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_QP_DB15
ADIL Gain: $ -0.13 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_TR_DB15
ADIL Gain: $ 0.03 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AV_DB15
ADIL Gain: $ -1.05 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AL_DB15
ADIL Gain: $ -3.93 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_QP_DB15
ADIL Gain: $ -1.06 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_TR_DB15
ADIL Gain: $ 0.22 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AV_DB15
ADIL Gain: $ -2.09 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_QP_DB15
ADIL Gain: $ -0.04 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QL_DB15
ADIL Gain: $ -0.07 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QP_DB15
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_IR4
ADIL Gain: $ -1.89 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR_QP
ADIL Gain: $ -2.32 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP_IR4
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_TR
ADIL Gain: $ -0.09 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AV
ADIL Gain: $ -1.27 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_AL
ADIL Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV_QP
ADIL Gain: $ -0.35 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_TR
ADIL Gain: $ -0.44 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AV
ADIL Gain: $ -1.22 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_AL
ADIL Gain: $ 0.33 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM_QP
ADIL Gain: $ 0.13 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QL
ADIL Gain: $ -0.3 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT_QP
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AO_AC
ADIL Gain: $ -0.95 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP_PM
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_RV
ADIL Gain: $ -1.44 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IR4
ADIL Gain: $ -0.32 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TR
ADIL Gain: $ 0.34 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AV
ADIL Gain: $ -1.27 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AL
ADIL Gain: $ 0.23 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_VI
ADIL Gain: $ -0.1 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_LI
ADIL Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QP
ADIL Gain: $ -0.22 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_HM
ADIL Gain: $ -0.27 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_SS
ADIL Gain: $ 0.62 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_QL
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_DB15
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AO
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_AC
ADIL Gain: $ 0.45 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_IT
ADIL Gain: $ 0.32 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_PM
ADIL Gain: $ -0.05 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB2_CS2_TS
ADIL Gain: $ -1.7 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_QP_DB15
ADIL Gain: $ -0.09 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_TR_DB15
ADIL Gain: $ -1.3 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AV_DB15
ADIL Gain: $ -1.34 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AL_DB15
ADIL Gain: $ -3.93 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_QP_DB15
ADIL Gain: $ -0.16 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_TR_DB15
ADIL Gain: $ 0.46 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AV_DB15
ADIL Gain: $ -2.23 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_QP_DB15
ADIL Gain: $ -0.12 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QL_DB15
ADIL Gain: $ -0.07 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QP_DB15
ADIL Gain: $ -0.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_IR4
ADIL Gain: $ -1.21 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR_QP
ADIL Gain: $ -2.32 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP_IR4
ADIL Gain: $ -0.39 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_TR
ADIL Gain: $ 0.52 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AV
ADIL Gain: $ -0.72 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_AL
ADIL Gain: $ -0.13 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV_QP
ADIL Gain: $ -0.35 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_TR
ADIL Gain: $ 0.51 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AV
ADIL Gain: $ -0.72 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_AL
ADIL Gain: $ -2.12 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM_QP
ADIL Gain: $ -0.06 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QL
ADIL Gain: $ -0.11 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT_QP
ADIL Gain: $ 0.91 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AO_AC
ADIL Gain: $ -0.95 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP_PM
ADIL Gain: $ 0.91 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_RV
ADIL Gain: $ -1.44 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IR4
ADIL Gain: $ -0.41 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TR
ADIL Gain: $ 0.34 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AV
ADIL Gain: $ -0.84 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AL
ADIL Gain: $ -0.03 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_VI
ADIL Gain: $ 0.8 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_LI
ADIL Gain: $ -1.89 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QP
ADIL Gain: $ 0.44 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_HM
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_SS
ADIL Gain: $ 0.33 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_QL
ADIL Gain: $ 0.69 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_DB15
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AO
ADIL Gain: $ -0.2 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_AC
ADIL Gain: $ -0.22 Win %: 0 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_IT
ADIL Gain: $ 0.05 Win %: 50.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_PM
ADIL Gain: $ 0 Win %: 100.00 in 2 days with algo TB2_HI_QM_OB1_OS1_CB1_CS1_TS
